force-app/main/default/objects/HAM_Event_Settings__c/HAM_Event_Settings__c.object-meta.xml
<CustomObject>
    <description>Stores migrated Blackthorn (conference360) Event Settings configuration profiles. These settings control registration page UI, tab visibility, payment methods, waitlist behavior, and attendee-facing options. 16 records migrated from conference360__Event_Settings__c.</description>
    <label>HAM Event Settings</label>
    <nameField>
        <label>Event Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HAM Event Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>