force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Allow_Form_Responses_Group__c.field-meta.xml
<CustomField>
    <fullName>HAM_Allow_Form_Responses_Group__c</fullName>
    <description>Allow form responses at attendee group level.</description>
    <inlineHelpText>Controls whether form responses can be submitted at the attendee group level.</inlineHelpText>
    <label>Allow Form Responses for Attendee Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>