force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Attendees_Visibility__c.field-meta.xml
<CustomField>
    <fullName>HAM_Attendees_Visibility__c</fullName>
    <description>Controls attendee list visibility on event page.</description>
    <inlineHelpText>Determines when the Attendees tab/section is visible: Always, Hide, or only Post-Registration.</inlineHelpText>
    <label>Attendees Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Always</fullName>
            </value>
            <value>
                <fullName>Hide</fullName>
            </value>
            <value>
                <fullName>Post-Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>