force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Auto_Update_No_Show__c.field-meta.xml
<CustomField>
    <fullName>HAM_Auto_Update_No_Show__c</fullName>
    <description>Auto-update Attendance to No Show.</description>
    <inlineHelpText>When Yes, automatically sets attendance status to No Show for attendees not checked in after event ends.</inlineHelpText>
    <label>Auto-update Attendance to No Show</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>