force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>HAM_Background_Color__c</fullName>
    <description>Hex color code for registration page background.</description>
    <inlineHelpText>Six-character hex code (no #) for the registration page background color (e.g. &apos;ffffff&apos;).</inlineHelpText>
    <label>Background Color</label>
    <length>6</length>
    <type>Text</type>
</CustomField>