force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_BT_Event_Settings__c.field-meta.xml
<CustomField>
    <fullName>HAM_BT_Event_Settings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup back to original Blackthorn Event Settings record for cross-referencing.</description>
    <inlineHelpText>Direct lookup reference to the source Blackthorn Event Settings record for cross-referencing.</inlineHelpText>
    <label>BT Event Settings</label>
    <referenceTo>conference360__Event_Settings__c</referenceTo>
    <relationshipLabel>HAM Event Settings</relationshipLabel>
    <relationshipName>HAM_Event_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>