force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_BT_Event_Settings_Id__c.field-meta.xml
<CustomField>
    <fullName>HAM_BT_Event_Settings_Id__c</fullName>
    <description>Blackthorn Event Settings record ID. Used as External ID for idempotent upsert during migration.</description>
    <externalId>true</externalId>
    <inlineHelpText>Stores the original Blackthorn Event Settings record ID. Used as External ID for idempotent upsert during migration.</inlineHelpText>
    <label>BT Event Settings Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>