force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Card_Color_Theme__c.field-meta.xml
<CustomField>
    <fullName>HAM_Card_Color_Theme__c</fullName>
    <description>Light or Dark card styling on event pages.</description>
    <inlineHelpText>Controls whether event cards render with a Light or Dark color scheme.</inlineHelpText>
    <label>Card Color Theme</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Light</fullName>
            </value>
            <value>
                <fullName>Dark</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>