force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Contact_Us_Visibility__c.field-meta.xml
<CustomField>
    <fullName>HAM_Contact_Us_Visibility__c</fullName>
    <description>Controls Contact Us section visibility.</description>
    <inlineHelpText>Determines when the Contact Us section is visible on the event registration page.</inlineHelpText>
    <label>Contact Us Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Always</fullName>
            </value>
            <value>
                <fullName>Hide</fullName>
            </value>
            <value>
                <fullName>Post-Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>