force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Create_Opp_From_Checkout__c.field-meta.xml
<CustomField>
    <fullName>HAM_Create_Opp_From_Checkout__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Create Opportunity from ticket purchase.</description>
    <inlineHelpText>When true, creates a Salesforce Opportunity record when an attendee completes checkout.</inlineHelpText>
    <label>Create Opportunity From Checkout</label>
    <type>Checkbox</type>
</CustomField>