force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Create_Opps_For_Donations__c.field-meta.xml
<CustomField>
    <fullName>HAM_Create_Opps_For_Donations__c</fullName>
    <description>Create Opportunity records for donations.</description>
    <inlineHelpText>Controls whether Salesforce Opportunity records are created when attendees make donations.</inlineHelpText>
    <label>Create Opportunities For Donations</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>