force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Create_Zero_Dollar_Opps__c.field-meta.xml
<CustomField>
    <fullName>HAM_Create_Zero_Dollar_Opps__c</fullName>
    <description>Create Opportunity records for $0 (free) registrations.</description>
    <inlineHelpText>Controls whether Opportunity records are created for $0 (free) registrations.</inlineHelpText>
    <label>Create Zero Dollar Opportunities</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>