force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Custom_Tabs_Visibility__c.field-meta.xml
<CustomField>
    <fullName>HAM_Custom_Tabs_Visibility__c</fullName>
    <description>Controls custom tabs visibility on event page.</description>
    <inlineHelpText>Determines when custom tabs are visible on the event registration page.</inlineHelpText>
    <label>Custom Tabs Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Always</fullName>
            </value>
            <value>
                <fullName>Hide</fullName>
            </value>
            <value>
                <fullName>Post-Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>