force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Decimal_Separator__c.field-meta.xml
<CustomField>
    <fullName>HAM_Decimal_Separator__c</fullName>
    <description>Character used as decimal separator for currency/number display.</description>
    <inlineHelpText>The decimal separator character used for currency/number display (period or comma).</inlineHelpText>
    <label>Decimal Separator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>