force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Display_Donations_Separately__c.field-meta.xml
<CustomField>
    <fullName>HAM_Display_Donations_Separately__c</fullName>
    <description>Separate donations and products in checkout.</description>
    <inlineHelpText>When Yes, donations and products are displayed in separate sections during checkout.</inlineHelpText>
    <label>Display Donations &amp; Products Separately</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>