force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Enable_Cancel_Registration__c.field-meta.xml
<CustomField>
    <fullName>HAM_Enable_Cancel_Registration__c</fullName>
    <description>Whether attendees can cancel their own registration.</description>
    <inlineHelpText>Controls whether the cancel registration option is available to attendees on their confirmation page.</inlineHelpText>
    <label>Enable Cancel Registration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>