force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Enable_Wallet_AttendeeLink__c.field-meta.xml
<CustomField>
    <fullName>HAM_Enable_Wallet_AttendeeLink__c</fullName>
    <description>Show Add to Wallet button on AttendeeLink.</description>
    <inlineHelpText>Controls whether the Add to Apple/Google Wallet button is shown on the attendee link page.</inlineHelpText>
    <label>Enable Add to Wallet from AttendeeLink</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Show</fullName>
            </value>
            <value>
                <fullName>Hide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>