force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Enabled_Payment_Methods__c.field-meta.xml
<CustomField>
    <fullName>HAM_Enabled_Payment_Methods__c</fullName>
    <description>Semicolon-separated list of payment methods.</description>
    <inlineHelpText>Payment methods enabled for checkout (e.g. &apos;Card;Card,Pay Later;Card,Pay Later,ACH&apos;).</inlineHelpText>
    <label>Enabled Payment Methods</label>
    <length>255</length>
    <type>Text</type>
</CustomField>