force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Font__c.field-meta.xml
<CustomField>
    <fullName>HAM_Font__c</fullName>
    <description>Font family for event registration pages.</description>
    <inlineHelpText>The web font applied to event registration pages (e.g. &apos;Open Sans&apos;).</inlineHelpText>
    <label>Font</label>
    <length>255</length>
    <type>Text</type>
</CustomField>