force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Greeting_Formality__c.field-meta.xml
<CustomField>
    <fullName>HAM_Greeting_Formality__c</fullName>
    <description>How attendee names are displayed in greetings.</description>
    <inlineHelpText>Controls name formatting in greetings: Formal (Mr./Ms. Last), Informal First (First), or Informal Full (First Last).</inlineHelpText>
    <label>Greeting Name Formality</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Formal</fullName>
            </value>
            <value>
                <fullName>Informal First</fullName>
            </value>
            <value>
                <fullName>Informal Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>