force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Hide_Main_Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>HAM_Hide_Main_Contact_Address__c</fullName>
    <description>Hide address fields on registration form.</description>
    <inlineHelpText>Controls whether the main contact address fields are hidden during registration.</inlineHelpText>
    <label>Hide Main Contact Address</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>