force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Hide_Main_Contact_Company__c.field-meta.xml
<CustomField>
    <fullName>HAM_Hide_Main_Contact_Company__c</fullName>
    <description>Hide company name on registration form.</description>
    <inlineHelpText>Controls whether the company name field is hidden during registration.</inlineHelpText>
    <label>Hide Main Contact Company Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>