force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Hide_Price_Range__c.field-meta.xml
<CustomField>
    <fullName>HAM_Hide_Price_Range__c</fullName>
    <description>Hide ticket price range on event listing.</description>
    <inlineHelpText>Controls whether the price range is hidden from the event overview page.</inlineHelpText>
    <label>Hide Price Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>