force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Hide_QR_From_AttendeeLink__c.field-meta.xml
<CustomField>
    <fullName>HAM_Hide_QR_From_AttendeeLink__c</fullName>
    <description>Hide QR code on attendee confirmation.</description>
    <inlineHelpText>Controls whether the QR code is hidden on the attendee confirmation/link page.</inlineHelpText>
    <label>Hide QR From AttendeeLink</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>