force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Is_Default__c.field-meta.xml
<CustomField>
    <fullName>HAM_Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this is the org-wide default event settings.</description>
    <inlineHelpText>When true, this settings profile is automatically applied to new events that don&apos;t specify one.</inlineHelpText>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>