force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_One_Unique_Email_Per_Event__c.field-meta.xml
<CustomField>
    <fullName>HAM_One_Unique_Email_Per_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prevent duplicate email registrations per event.</description>
    <inlineHelpText>When true, enforces that each email address can only register once per event.</inlineHelpText>
    <label>One Unique Attendee Email Per Event</label>
    <type>Checkbox</type>
</CustomField>