force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Opp_Open_Stage__c.field-meta.xml
<CustomField>
    <fullName>HAM_Opp_Open_Stage__c</fullName>
    <description>Stage name for newly created Opportunities.</description>
    <inlineHelpText>The Opportunity stage name used when creating new Opportunities from registration (e.g. &apos;Value&apos;).</inlineHelpText>
    <label>Opportunity Open Stage Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>