force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Opp_Success_Stage__c.field-meta.xml
<CustomField>
    <fullName>HAM_Opp_Success_Stage__c</fullName>
    <description>Stage name for successful payment Opportunities.</description>
    <inlineHelpText>The Opportunity stage name set when payment is completed (e.g. &apos;Closed Won&apos;).</inlineHelpText>
    <label>Opportunity Successful Stage Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>