force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Overview_Pricing__c.field-meta.xml
<CustomField>
    <fullName>HAM_Overview_Pricing__c</fullName>
    <description>Show pricing on event overview.</description>
    <inlineHelpText>Controls whether pricing information is displayed on the event overview section.</inlineHelpText>
    <label>Overview Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>