force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Primary_Color__c.field-meta.xml
<CustomField>
    <fullName>HAM_Primary_Color__c</fullName>
    <description>Hex color code for primary branding color.</description>
    <inlineHelpText>Six-character hex code (no #) for the primary brand color used on registration pages (e.g. &apos;002f65&apos;).</inlineHelpText>
    <label>Primary Color</label>
    <length>6</length>
    <type>Text</type>
</CustomField>