force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Remove_Info_Page_Free__c.field-meta.xml
<CustomField>
    <fullName>HAM_Remove_Info_Page_Free__c</fullName>
    <description>Skip info page for free events.</description>
    <inlineHelpText>When Yes, the information collection page is skipped for free events, going directly to confirmation.</inlineHelpText>
    <label>Remove Info Page for Free Events</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>