force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Require_Ticket_To_Publish__c.field-meta.xml
<CustomField>
    <fullName>HAM_Require_Ticket_To_Publish__c</fullName>
    <description>Require ticket before event can be published.</description>
    <inlineHelpText>When Yes, the event cannot be published unless at least one ticket type is configured.</inlineHelpText>
    <label>Require At Least One Ticket To Publish</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>