force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Search_Bar__c.field-meta.xml
<CustomField>
    <fullName>HAM_Search_Bar__c</fullName>
    <description>Enable/disable search bar on event page.</description>
    <inlineHelpText>Controls whether the search bar is displayed on the event registration page.</inlineHelpText>
    <label>Search Bar</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On</fullName>
            </value>
            <value>
                <fullName>Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>