force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Show_Agenda__c.field-meta.xml
<CustomField>
    <fullName>HAM_Show_Agenda__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show agenda on navigator app.</description>
    <inlineHelpText>When true, the Agenda view is displayed in the Blackthorn Navigator mobile app.</inlineHelpText>
    <label>Show Agenda</label>
    <type>Checkbox</type>
</CustomField>