force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Show_Attendees_Nav__c.field-meta.xml
<CustomField>
    <fullName>HAM_Show_Attendees_Nav__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show attendees on navigator app.</description>
    <inlineHelpText>When true, the Attendees list is displayed in the Blackthorn Navigator mobile app.</inlineHelpText>
    <label>Show Attendees (Navigator)</label>
    <type>Checkbox</type>
</CustomField>