force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Show_Expired_Tickets__c.field-meta.xml
<CustomField>
    <fullName>HAM_Show_Expired_Tickets__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Display expired tickets on event page.</description>
    <inlineHelpText>When true, tickets past their sales end date are still visible (but not purchasable) on the event page.</inlineHelpText>
    <label>Show Expired Tickets</label>
    <type>Checkbox</type>
</CustomField>