force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Show_Map__c.field-meta.xml
<CustomField>
    <fullName>HAM_Show_Map__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show map on navigator app.</description>
    <inlineHelpText>When true, the Map view is displayed in the Blackthorn Navigator mobile app.</inlineHelpText>
    <label>Show Map</label>
    <type>Checkbox</type>
</CustomField>