force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Show_Profile__c.field-meta.xml
<CustomField>
    <fullName>HAM_Show_Profile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show profile on navigator app.</description>
    <inlineHelpText>When true, the Profile section is displayed in the Blackthorn Navigator mobile app.</inlineHelpText>
    <label>Show Profile</label>
    <type>Checkbox</type>
</CustomField>