force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Show_Sold_Out_Tickets__c.field-meta.xml
<CustomField>
    <fullName>HAM_Show_Sold_Out_Tickets__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Display sold-out tickets on event page.</description>
    <inlineHelpText>When true, sold-out tickets remain visible (marked as Sold Out) on the event page.</inlineHelpText>
    <label>Show Sold Out Tickets</label>
    <type>Checkbox</type>
</CustomField>