force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Show_Ticket__c.field-meta.xml
<CustomField>
    <fullName>HAM_Show_Ticket__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show ticket on navigator app.</description>
    <inlineHelpText>When true, the Ticket view is displayed in the Blackthorn Navigator mobile app.</inlineHelpText>
    <label>Show Ticket</label>
    <type>Checkbox</type>
</CustomField>