force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Sponsors_Visibility__c.field-meta.xml
<CustomField>
    <fullName>HAM_Sponsors_Visibility__c</fullName>
    <description>Controls sponsors tab visibility on event page.</description>
    <inlineHelpText>Determines when the Sponsors tab/section is visible on the event registration page.</inlineHelpText>
    <label>Sponsors Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Always</fullName>
            </value>
            <value>
                <fullName>Hide</fullName>
            </value>
            <value>
                <fullName>Post-Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>