force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Waitlist_Automate__c.field-meta.xml
<CustomField>
    <fullName>HAM_Waitlist_Automate__c</fullName>
    <description>Automatically approve waitlisted attendees.</description>
    <inlineHelpText>When Yes, waitlisted attendees are automatically approved when capacity opens up.</inlineHelpText>
    <label>Waitlist Automate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>