force-app/main/default/objects/HAM_Event_Settings__c/fields/HAM_Waitlist_Message__c.field-meta.xml
<CustomField>
    <fullName>HAM_Waitlist_Message__c</fullName>
    <description>Message displayed to waitlisted attendees.</description>
    <inlineHelpText>Custom HTML message shown to attendees placed on the waitlist.</inlineHelpText>
    <label>Waitlist Message</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>